# fernconf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_test.yaml  fernconf.yaml  on_all_push.yaml  test_and_package.yaml
shell_tests/: SimpleTool.py  bad_config.json  good_config.json  shell_test.sh  shell_test_helpers.sh
shell_tests/example_srcs/: README  example.S  example.c  example.ld  example.mk
src/fernconf/: ConfigSchema.py  FCSchema.py  FCTooling.py  FCTranslator.py  FCValue.py  FernConf.py  __init__.py  example.py
src/fernconf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: test_FCSchema.py  test_FCTranslator.py  test_FCValue.py  test_example.py
