[project]
name = "fernconf"
version = "0.0.1"
authors = [
  { name="Chatham Abate" },
]
description = "A configuration manager built for fern-os"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
