[project]
name = "fernconf"
dynamic = ["version"]
authors = [
  { name="Chatham Abate" },
]
description = "A configuration manager built for fern-os"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools_scm >= 6.2"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest >= 9.0.0",
    "mypy >= 2.1.0"
]

[tool.pytest]
filterwarnings = [ "error" ]
minversion = "9.0"
addopts = [ "-ra", "-q", "--strict-config", "--strict-markers" ]
testpaths = ["src/tests"]

[tool.mypy]
warn_return_any = true

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

